add employee by employee
